--- a/views/galleryNew.ejs
+++ b/views/galleryNew.ejs
@@ -15,7 +15,7 @@
 					<button class='btn btn-lg btn-primary btn-block'>Save</button>
 				</div>
 			</form>
-			<a href='/gallery'>Back</a>
+			<a href='/gallery'>Go Back</a>
 		</div>
 	</div>
 </div>
